sort.basic.insertion.AlgInsertionSort.scala.error
Erreur de compilation :
AlgInsertionSort:12: error: reassignment to val
      i=i-1
       ^AlgInsertionSort:16: error: not found: value a
    setValeur(a,v)
              ^AlgInsertionSort:16: error: not found: value v
    setValeur(a,v)
                ^